<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_for_voot"
            android:textSize="25sp"
            android:paddingTop="50dp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/first_name"
            android:inputType="textCapSentences|textAutoCorrect"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/last_name"
            android:inputType="textCapSentences|textAutoCorrect"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/street"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/street"
            android:inputType="textCapSentences|textAutoCorrect"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/city"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/city"
            android:inputType="textCapSentences|textAutoCorrect"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/state"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/state"
            android:inputType="textCapCharacters"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/zip_code"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/zip_code"
            android:inputType="number"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/county"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/county"
            android:inputType="textCapSentences|textAutoCorrect"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up"/>

    </LinearLayout>

</ScrollView>