<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/push_notifications"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"

            android:layout_marginTop="20dp">
            <CheckBox
                android:id="@+id/upcoming_election_reminders_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_election_reminders"/>
        </LinearLayout>

        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_info"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/first_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/first_name"
            android:inputType="textCapSentences|textAutoCorrect"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/last_name"
            android:inputType="textCapSentences|textAutoCorrect"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/street"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/street"
            android:inputType="textCapSentences|textAutoCorrect"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/city"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/city"
            android:inputType="textCapSentences|textAutoCorrect"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/state"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/state"
            android:inputType="textCapCharacters"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/zip_code"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/zip_code"
            android:inputType="number"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/county"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/county"
            android:inputType="textCapSentences|textAutoCorrect"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/save_and_update_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/save_and_update"/>

    </LinearLayout>

</ScrollView>