<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.voot_austin.voot.ContactRepActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rep_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rep_name_placeholder"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <include layout="@layout/location_layout"/>

        <ImageView
            android:id="@+id/portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/default_portrait"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:contentDescription="@string/rep_img_placeholder"/>

        <TextView
            android:id="@+id/rep_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rep_info_placeholder"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/email_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>