<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.voot_austin.voot.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="120dp"
        android:minWidth="200dp"
        android:src="@drawable/voot_header"
        android:layout_gravity="center"
        android:contentDescription="header"/>

    <TextView
        android:id="@+id/user_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/user_name_placeholder"/>

    <include layout="@layout/location_layout"/>

    <Button
        android:id="@+id/representatives_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Representatives"/>
    <Button
        android:id="@+id/elections_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Upcoming_Elections"/>
    <Button
        android:id="@+id/poll_locations_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Poll_Locations"/>

    <Button
        android:id="@+id/reminders_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reminders"/>

</LinearLayout>
